--- a/ChromeExtension/extension.css
+++ b/ChromeExtension/extension.css
@@ -2,11 +2,8 @@ body{
     margin: 0;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
+    min-width: 400px;
 }
-
-
-
-
 
 
 input{
@@ -16,6 +13,7 @@ input{
     box-sizing: border-box;
     border: 1px solid ;
     margin-bottom: 4px;
+    
 }
 
 
@@ -23,6 +21,30 @@ button{
  background: #5f9341;
 color: white;
 padding: 10px 20px; 
-border: none;
+border: 1px solid #5f9341;
 font-weight: bold;
+}
+
+#delete-btn  {
+    background-color: white;
+    color: #5f9341;
+}
+
+ul {
+    margin-top: 20px;
+    list-style: none;
+    padding-left: 0;
+
+    
+
+}
+
+li{
+    margin-top: 5px;
+
+}
+
+li a{
+    color: #5f9341;
+
 }
